fix for overflow and background image in responsive

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 .App {
  height: 100vh;
  width: 100vw;
+ overflow-y: auto;
  background-color: $very-dark-blue;
  display: flex;
  justify-content: center;
