--- a/src/pages/stats-page/stats-page.styles.scss
+++ b/src/pages/stats-page/stats-page.styles.scss
@@ -15,6 +15,6 @@
         // width: 85%;
         flex-direction: column-reverse;
         max-width: 380px;
-        height: calc(100% - 40px);
+        height: unset;
     }
 }
